# text_summarization

./: LICENSE  README.md  app.py  evaluate.py  pyproject.toml  result.py
scripts/: setup.sh  train.sh
src/summarization/: __init__.py
src/summarization/dataset/: datamodule.py  get_dataset.py
src/summarization/model/: model.py
src/summarization/train/: __main__.py
